# verus

./: .gitignore  by_lean.rs
dependencies/syn/: syn.json
dependencies/syn/src/: verus.rs
dependencies/syn/tests/debug/: gen.rs
source/: .gitignore
source/air/: Cargo.toml
source/builtin/src/: lib.rs
source/builtin_macros/src/: syntax.rs
source/rust_verify/: Cargo.toml
source/rust_verify/src/: attributes.rs  fn_call_to_vir.rs  rust_to_vir_adts.rs  rust_to_vir_func.rs  verifier.rs  verus_items.rs
source/serialized_assert/: serialized_assert_19.json  serialized_assert_34.json  serialized_assert_50.json  serialized_assert_66.json  serialized_assert_78.json
source/vir/: Cargo.toml
source/vir/src/: ast.rs  ast_simplify.rs  ast_to_sst.rs  ast_to_sst_func.rs  ast_util.rs  ast_visitor.rs  def.rs  early_exit_cf.rs  expand_errors.rs  heuristics.rs  interpreter.rs  inv_masks.rs  lib.rs  messages.rs  modes.rs  poly.rs  scc.rs  sst.rs  sst_elaborate.rs  sst_to_air.rs  sst_to_air_func.rs  sst_to_lean.rs  sst_util.rs  sst_vars.rs  sst_visitor.rs  triggers.rs  triggers_auto.rs
tests/: by_lean.rs  datatypes.rs  getting_started.rs  integer_ring.rs  maps.rs  matching.rs  mini-c.rs  mini_c.rs  mutual_recursion.rs  nonlinear.rs  proof_fn.rs  quant.rs  recursion.rs  seqs.rs  sets.rs  test_array.rs  test_quant.rs  test_requires.rs  test_specfn.rs  vstd.rs
tools/vargo/src/: main.rs
